welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: value Length is not a member of Array[java.awt.Color]
    for (i<-0 to (creationTableau()).Length -1)
                                     ^Array1:10: error: type mismatch;
 found   : Array[java.awt.Color]
 required: java.awt.Color
      peindre(remplirTableau(i))
                            ^Array1:19: error: not found: value hauteur
  hauteur = getMondeHauteur()
  ^Array1:20: error: not found: value hauteur
  var T = new Array[Color] (hauteur)
                            ^Array1:26: error: value foreach is not a member of Int
  for (i<- getMondeHauteur())
                          ^