welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var T = remplirTableau(creationTableau())
  var L = getMondeLargeur()
  for (i<- 0 to L-1)
  {
    decale()
    for (i<-0 to (creationTableau()).Length -1)
    {
      peindre(remplirTableau(i))
      avance()
    }
  }
  
}

def creationTableau():Array[Color] =
{
  hauteur = getMondeHauteur()
  var T = new Array[Color] (hauteur)
  return T
}

def remplirTableau(Tab : Array[Color]):Array[Color] =
{
  for (i<- getMondeHauteur())
  {
    Tab(i) = getCouleurSol()
    avance()
  }
  return Tab
}

def peindre(couleur : Color)
{
  setCouleurBrosse(couleur)
  baisseBrosse()
  leveBrosse()
}

def decale()
{
  droite()
  avance()
  gauche()
}